2002-10-29  Andreas Buesching  <crunchy@tzi.de>

	* mpiosh/mpiosh.c (mpiosh_init): uses the new configuration file
	support to initialise the shell

	* etc/mpio/mpioshrc: add a sample configuration file will be
	install as a global configuration file in
	@sysconfdir@/mpio/mpioshrc

	* mpiosh/cfgio.c, mpiosh/cfgio.c, mpiosh/config.c,
	mpiosh/config.h: added these new files to support global and user
	configuration files.
			 

2002-10-27  Markus Germeier  <mager@tzi.de>

	* libmpio/mpio.{c,h}: split mpio_file_{get,put} into several
	  functions, to allow reading and writing files from/to memory
	  (needed for handling of config files)
	* mpiosh/callback.c (mpiosh_cmd_channel): added function/command
	  channel to handle the radio channel of the *-Plus models
	* libmpio/directory.c (mpio_dentry_put): 
	  another fix for the 8.3 handling needed for the config file
	  (one day this will be bug free ...)
	* mpiosh/callback.c (mpiosh_cmd_config): implement the function
	* libmpio/directory.c (mpio_dentry_find_name_8_3): 
	  another fix for the 8.3 handling needed for the config file
	  (GRR, one day ...)
	* libmpio/mpio.c (mpio_get_model): added function
	* mpiosh/callback.c (mpiosh_cmd_switch): implement the function
	* libmpio/mpio.c (mpio_file_switch): added function
	* mpiosh/callback.c (mpiosh_cmd_mget): added error message
	* libmpio/mpio.c (mpio_file_put_real): 
	  updates to support reading files into memory	
	
2002-10-26  Markus Germeier  <mager@tzi.de>

	* libmpio/mpio.c (mpio_close): fixed segv
	* libmpio/*.h:
	  make libmpio header files C++ compliant

2002-10-23  Markus Germeier  <mager@tzi.de>

	* libmpio/io.c (mpio_io_spare_read): fixed init progress counter
	  for models with two internal chips

2002-10-18  Andreas Buesching  <crunchy@tzi.de>

	* mpiosh/global.c (commands): add config command with no
	functionality at the moment
	(commands): removed completion for mpio files on the put command

2002-10-14  Andreas Buesching  <crunchy@tzi.de>
